[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main/Main.gd" type="Script" id=1]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="saveTimer" type="Timer" parent="."]
wait_time = 300.0
autostart = true

[node name="loadTimer1" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="loadTimer2" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="loadTimer3" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_priority = 3951

[node name="test" type="RichTextLabel" parent="CanvasLayer"]
margin_left = 5.41644
margin_top = 169.458
margin_right = 509.416
margin_bottom = 209.458
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="saveTimer" to="." method="_on_saveTimer_timeout"]
[connection signal="timeout" from="loadTimer1" to="." method="_on_loadTimer1_timeout"]
[connection signal="timeout" from="loadTimer2" to="." method="_on_loadTimer2_timeout"]
[connection signal="timeout" from="loadTimer3" to="." method="_on_loadTimer3_timeout"]
